# LLM-Workflow-Explorer

./: .env.sample  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  answer_winrate_evaluation.py  baseline_FullContextAnswer.py  baseline_LLMbased.py  baseline_VectorSimilarityAnswer.py  evaluation_results.ipynb  evaluation_results.py  exeprog_creation.py  explainer.py  explainer_experiment.py  main.py  progques_creation.py  pyproject.toml  run.sh  show_question_tags.py  test.text  test_graph.py  visualize_explainer_results.py
annotation-library/python/: README.md  setup.py
baselines/: __init__.py
baselines/FullContextAnswer/: README.md  __init__.py  baseline.py
baselines/LLMbased/: README.md  __init__.py  baseline.py
baselines/VectorSimilarityAnswer/: README.md  __init__.py  baseline.py
evaluations/calibration/: config.yaml  ground_truth.ipynb  ground_truth.py
evaluations/calibration-base/: config.fullcontext.yaml  config.llmbased.yaml  config.yaml
evaluations/chatbs-base/: config.evaluation.yaml  config.fullcontext.yaml  config.yaml  (+5 more)
schema/: OntologyFiltering.py  WorkFlow.ttl  classForConsideration.json  extracted_ontology_triples.csv  ontology_config.yaml  schema.json  schemaV2.json
tests/: test_dependancy_graph.py  test_dependancy_graph_schema_answer.py  test_embeddings.py  test_full_context_answer_baseline.py  test_llm_based_baseline.py  test_milvus_vector_db.py  test_milvus_vector_db_integration.py  test_object_search.py  test_ontology_info_retriever.py  test_sq_retriver.py  test_utils.py  test_vector_similarity_answer_baseline.py
(+979 files in other folders)
