[project]
name = "llm-workflow-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dycomutils>=0.2.0",
    "marimo[recommended]>=0.20.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "rdflib>=7.6.0",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
]
