[project]
name = "llm-workflow-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.1.3",
    "dycomutils>=0.2.0",
    "icecream>=2.1.10",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "marimo[recommended]>=0.22.0",
    "notebook>=7.5.5",
    "pandas>=3.0.1",
    "pymilvus>=2.5.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "rdflib>=7.6.0",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
]
